Criteria button spacing fix

--- a/dnstorm/app/static/scss/app.scss
+++ b/dnstorm/app/static/scss/app.scss
@@ -442,6 +442,9 @@ h6.subheader {
     .description {
         margin: 5px 0;
     }
+    .problem-criterias {
+        margin-bottom: emCalc(20px);
+    }
 }
 
 .problem-icons {
